# PlateReader

./: .gitignore  CMakeLists.txt  README.md  main.cpp  platereader.cpp  platereader.h  server_conn.cpp  server_conn.h  take_picture.sh
